2019-04-23  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-05

       * [JSPWIKI-1108] interwiki links with illegal characters causes XSS vulnerability

2019-04-22  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-04

       * [JSPWIKI-1107] uploading attachments with illegal filename causes XSS vulnerability

2019-04-05  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-03

       * [JSPWIKI-1100] Add support for mixed css-class & css-style markup

2019-04-05  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-02

       * [JSPWIKI-1101] Improve rendering of {{{inline preformatted text}}}

       * Change UI for attachement upload: by default, the FILE SELECTION input should be visible

2019-04-05  Dirk Frederickx (brushed AT apache DOT org)

       * 2.11.0-M4-git-01

       * Added interwiki link for location links (google maps)
         eg: [Atomium|Location:Atomium, City of Brussels, Belgium]

       * Added plain editor configs as regular properties.
         By default, the editor preview, autosuggestion and tabcompletion are set.

       * Various small js / css tweaks.

       * Add format option to <wiki:Author/> to render force rendering of text iso link

2019-03-22  Juan Pablo Santos (juanpablo AT apache DOT org)

       * prepare release for 2.11.0.M3

2019-03-21  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.11.0-M3-git-04

       * JSPWIKI-1095: DefaultURLConstructor#getForwardPage( HttpServletRequest req ) now always returns "Wiki.jsp"

       * JSPWIKI-1096: Upgrade bundled dependencies for 2.11.0-M3
         * flexmark to 0.40.24
         * lucene to 8.0.0
         * selenide to 5.2.2
         * slf4j to 1.7.26
         * tomcat to 8.5.39

2019-03-19  Juan Pablo Santos (juanpablo AT apache DOT org)

       * JSPWIKI-1094: mvn eclipse:eclipse fails, patch provided by Christian Fröhler, thanks! (no version bump)
